# advent-of-code-2022

./: Cargo.toml
src/: main.rs
src/days/: day_1.rs  day_1_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  mod.rs
