[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive", "env"] }
color-eyre = "0.6.2"
indoc = "2.0.0"
reqwest = { version = "0.11.14", features = ["blocking", "cookies"] }
