[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env"] }
color-eyre = { version = "0.6.2" }
directories = "4.0.1"
indoc = "2.0.0"
itertools = "0.10.5"
nom = "7.1.3"
reqwest = { version = "0.11.14", features = ["blocking", "cookies"] }

[dev-dependencies]
yare = "1.0.2"
